# TableTopExcercise

./: README.md
app/: pyproject.toml  tabletop.py
app/continutiy/: _change_control.py
app/data/: control_communities_plotly.html  control_communities_pyvis.html  distance.ipynb  explore.ipynb  recon.py  sankey.py  sp800-53r5-control-catalog.csv  trainingpipleline.md  visualization.py  your_graph.graphml
app/data/.ipynb_checkpoints/: distance-checkpoint.ipynb  exploring-checkpoint.py
app/explore/: carnival.md  exchange.md  rivercross.md  secret.key  sender_message.py
app/logic/: _conditions.py  _policy.py  compute_cost.py  concept.py  conditional_probability.py  dynamics.py  manuever.py  mtd.py  only_abort.py  response.py  states.py  statistica_inference.ipynb  table.py  tickets.py  transition.py
app/objectives/: objectives.ipynb  outline.md  outline.py
app/objectives/.ipynb_checkpoints/: objectives-checkpoint.ipynb
app/playbooks/: _blocks.py  _dice.py  _functions.py  _nodes.py  _relationships.py  _tactics.py  _tasks.py
app/project/: _process.py  _scope.py
app/users/: _users.py
